src/ui/snapshots/work_tui__ui__list__tests__epic_with_only_backlog_children.snap
---
source: src/ui/list.rs
assertion_line: 356
expression: "format_display_rows(&list.display_rows, &issues, &story_children)"
---
── BACKLOG (2) ──
▸ EPIC-1 Future work [backlog]
  • TASK-1 Research caching [Proposed]
  • TASK-2 Draft RFC [Proposed]
