src/ui/snapshots/work_tui__ui__list__tests__list_view_with_dev_active_issue.snap
---
source: src/ui/list.rs
assertion_line: 118
expression: rendered
---
 Key       Summary                     Status       Dev    ◷     PR   CI                                                
▌TEST-123  ◦ Snapshot the sidebar ren  In Progress  Casey  856d  #42  ✓● ⠋    ◦ Snapshot the sidebar render             
                                                                                                                        
                                                                              ── Jira ──────────────────── TEST-123 ──  
                                                                                                                        
                                                                              ── GitHub ─────────────────────── #42 ──  
                                                                              Status    Changes Requested               
                                                                              Repo      work-tui                        
                                                                              Changes   3 files  +72 / -14              
                                                                              Comments  2 unresolved · 0 resolved       
                                                                                                                        
                                                                              ── CI ─────────────────────────── 1/2 ──  
                                                                               ✓ lint  2m                               
                                                                               ● build                                  
                                                                                 ✓ compile  1m                          
                                                                                 ● integration
