src/ui/snapshots/work_tui__ui__list__tests__search_highlight_render.snap
---
source: src/ui/list.rs
expression: rendered
---
 Issue                                            Status       Dev                                                      
 BOARD (1 issue)                                                              ◦ Snapshot the sidebar render             
▌◦ TEST-123 Snapshot the sidebar render           In Progress  Casey                                                    
                                                                              ── Jira ──────────────────── TEST-123 ──  
                                                                              Status    In Progress                     
/ snap  (2 results)  Press / to edit, Esc to clear                            Assignee  Casey Dev
