src/ui/snapshots/work_tui__ui__list__tests__search_matches_epic.snap
---
source: src/ui/list.rs
expression: "format_display_rows(&list.display_rows, &issues, &story_children)"
---
── BOARD (0) ──
▸ EPIC-1 Platform migration [board]
  ⟳ loading...
