src/ui/snapshots/work_tui__ui__list__tests__search_matches_story.snap
---
source: src/ui/list.rs
expression: "format_display_rows(&list.display_rows, &issues, &story_children)"
---
── BOARD (1) ──
▸ STORY-1 Auth migration [board]
  • TASK-1 Update OAuth [In Progress]
